Parcial01 - Add userlist to html

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,11 @@
 <h1>{{title}}</h1>
+
+<ul>
+    <li *ngFor="let user of users">
+        {{user.id}} - {{user.userName}}
+    </li>
+<P>Otra forma de optener los mismos datos:</P>
+@for (user of users; track user.id) {
+    <li>{{user.id}} - {{user.userName}}</li>
+}
+</ul>
