Parcial01 - Add bootstrap dropdown

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,7 +12,21 @@
             <li class="nav-item">
                 <a class="nav-link">Messages</a>
             </li>
+            <li class = "nav-item"> 
+                <a class = "nav-link" (click)="logout()">Log Out</a>
+            </li>
         </ul>
+    }
+    @if(loggedIn){
+        <div dropdown class = "dropdown">
+            <a dropdownToggle class = "dropdown-toggle text-light text-decoration-none">Welcome user</a>
+            <div *dropdownMenu class = "dropdown-menu">
+                <a class = "dropdown-item">Profile</a>
+                <div class="dropdown-divider"></div>
+                <a class = "dropdown-item" (click)="logout()">Logout</a>
+            </div>
+
+        </div>
     }
     @if (!loggedIn) {
         <form #loginForm = "ngForm" (ngSubmit) = "login()" class="d-flex" autocomplete="off">
