--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -11,7 +11,7 @@
             <div class = "container">
                 <div class = "row justify-content-center">
                     <div class = "col-4">
-                        <p>TODO: Aquí vamos a poner una form para registro</p>
+                        <app-register [usersFromHomeComponent]="users"></app-register>
                     </div>
                 </div>
                 </div>
