--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
         <a class="navbar-brand" routerLink="/" routerLinkActive = "active">Dating App</a>
-        @if(accountService.currentUser()){
+
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            @if(accountService.currentUser()){
+            <ng-container></ng-container>
             <li class = "nav-item">
                 <a routerLink="/members"  routerLinkActive = "active" class = "nav-link">Matches</a>
             </li>
@@ -12,8 +14,9 @@
             <li class = "nav-item">
                 <a routerLink="/messages" routerLinkActive = "active" class = "nav-link">Messages</a>
             </li>
+        }
         </ul>
-    }
+    
     @if(accountService.currentUser()){
         <div dropdown class = "dropdown">
             <a dropdownToggle class = "dropdown-toggle text-light text-decoration-none">Welcome user</a>
